--- a/frontend-developer-1/practicas/clase_9(my_order).html
+++ b/frontend-developer-1/practicas/clase_9(my_order).html
@@ -85,7 +85,7 @@
             }
 
             .articles {
-                background-color: var(--text-input-field);
+                /* background-color: var(--text-input-field); */
                 border-radius: 20px;
                 padding: 15px;
                 margin-bottom: 24px;
@@ -121,6 +121,7 @@
             .article :nth-child(3) {
                 font-size: var(--md);
                 font-weight: bold;
+                margin: 0;
             }
  </style>
     <body>
@@ -137,27 +138,6 @@
                 </div>
             </div>
             <div class="articles">
-                <div class="article">
-                    <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Bike">
-                    </figure>
-                    <p>Bike</p>
-                    <p>$ 150,00</p>
-                </div>
-                <div class="article">
-                    <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Bike">
-                    </figure>
-                    <p>Bike</p>
-                    <p>$ 150,00</p>
-                </div>
-                <div class="article">
-                    <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Bike">
-                    </figure>
-                    <p>Bike</p>
-                    <p>$ 150,00</p>
-                </div>
                 <div class="article">
                     <figure>
                         <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Bike">
